src/objects/Apttus_Billing__DunningPolicyLineItem__c.object
<CustomObject>
    <description>This stores dunning policy line item information. Each line item represents a reminder. Each reminder could have a different reminder interval. Each reminder could have a different email template.</description>
    <fields>
        <fullName>Apttus_Billing__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This flag should not be displayed on UI. Use this flag to mark dunning policy line items as inactive whenever user decreases the number of reminders on the dunning policy</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AttachInvoicePDF__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Attach Invoice PDF attachment to the email being sent</description>
        <inlineHelpText>Attach Invoice PDF attachment to the email being sent</inlineHelpText>
        <label>Attach Invoice PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Baseline__c</fullName>
        <description>Baseline to calculate the interval value to send reminder</description>
        <inlineHelpText>Baseline to calculate the interval value to send reminder</inlineHelpText>
        <label>Baseline</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>From Invoice Due Date</fullName>
                    <default>true</default>
                    <label>From Invoice Due Date</label>
                </value>
                <value>
                    <fullName>From Previous Reminder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__DunningPolicyId__c</fullName>
        <description>To link Dunning Policy Line Item with Dunning Policy</description>
        <label>Dunning Policy</label>
        <referenceTo>Apttus_Billing__DunningPolicy__c</referenceTo>
        <relationshipLabel>Dunning Policy Line Items</relationshipLabel>
        <relationshipName>DunningPolicyLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__EmailTemplate__c</fullName>
        <description>API name of email template</description>
        <inlineHelpText>API name of email template</inlineHelpText>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__IntervalType__c</fullName>
        <description>Type of the interval</description>
        <label>Interval Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Hour(s)</fullName>
                    <isActive>false</isActive>
                    <label>Hour(s)</label>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                    <isActive>false</isActive>
                    <label>Week(s)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__IntervalValue__c</fullName>
        <description>Value of the interval E.g. 1,5,24 etc.</description>
        <inlineHelpText>Value of the interval E.g. 1,5,24 etc.</inlineHelpText>
        <label>Interval Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dunning Policy Line Item</label>
    <listViews>
        <fullName>Apttus_Billing__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dunning Policy Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dunning Policy Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>